conf/istio/istio-jaeger-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: 
  name: jaeger-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http-jaeger
      protocol: HTTP
    hosts:
    - "jaeger.${INGRESS_DOMAIN}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
  - "jaeger.${INGRESS_DOMAIN}"
  gateways:
  - jaeger-gateway
  http:
  - route:
    - destination:
        host: all-in-one-jaeger
        port:
          number: 16686
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger
  namespace: istio-system
spec:
  host: all-in-one-jaeger
  trafficPolicy:
    tls:
      mode: DISABLE
---
